force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/CAZ_Checklist_Monitoreo__c.object-meta.xml
<CustomObject>
    <label>Checklist de Monitoreo</label>
    <nameField>
        <displayFormat>CHK-{00000}</displayFormat>
        <label>Checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists de Monitoreo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>