force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Checklists de Monitoreo</relationshipLabel>
    <relationshipName>ChecklistMonitoreoCuenta</relationshipName>
    <type>Lookup</type>
</CustomField>