force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Acabados__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Acabados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribuidor - Acabados</label>
    <type>Checkbox</type>
</CustomField>