force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Comentarios_generales__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Comentarios_generales__c</fullName>
    <label>Distribuidor - Comentarios en general</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>