force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_CPC_condiciones__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_CPC_condiciones__c</fullName>
    <label>Distribuidor - Cemento CPC condiciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>