force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_CPC_volumen__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_CPC_volumen__c</fullName>
    <label>Dist CPC volumen ton</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>