force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Imagen_general__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Imagen_general__c</fullName>
    <label>Distribuidor - Imagen general</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>