force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Mortero_precio_mayoreo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Mortero_precio_mayoreo__c</fullName>
    <label>Dist Mortero precio mayoreo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>