force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Mortero_volumen__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Mortero_volumen__c</fullName>
    <label>Dist Mortero volumen ton</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>