force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Otros_productos__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Otros_productos__c</fullName>
    <label>Distribuidor - Otros productos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>