force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Precio_publico__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Precio_publico__c</fullName>
    <label>Distribuidor - Precio publico (MXN)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>