force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Rotulacion_CAZ__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Rotulacion_CAZ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dist rotulacion CAZ</label>
    <type>Checkbox</type>
</CustomField>