force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Solo_Cruz_Azul__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Solo_Cruz_Azul__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dist solo Cruz Azul</label>
    <type>Checkbox</type>
</CustomField>