force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Dist_Vendedores__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Dist_Vendedores__c</fullName>
    <label>Distribuidor - Numero de vendedores</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>