force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Fecha_visita__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fecha_visita__c</fullName>
    <label>Fecha de visita</label>
    <type>DateTime</type>
</CustomField>