force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Fotos__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Fotos__c</fullName>
    <label>Fotos</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>