force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Hora_llegada__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Hora_llegada__c</fullName>
    <label>Hora de llegada</label>
    <type>Time</type>
</CustomField>