force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Hora_termino__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Hora_termino__c</fullName>
    <label>Hora de termino</label>
    <type>Time</type>
</CustomField>