force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Atencion_distribuidor__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Atencion_distribuidor__c</fullName>
    <label>Mat atencion distribuidor</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>