force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Clasificacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Clasificacion__c</fullName>
    <label>Materialista - Clasificacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multimarca</fullName>
                <default>true</default>
                <label>Multimarca</label>
            </value>
            <value>
                <fullName>Exclusivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>