force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_CPC_precio_mayoreo__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_CPC_precio_mayoreo__c</fullName>
    <label>Mat CPC precio mayoreo</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>