force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Estrategias_competencia__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Estrategias_competencia__c</fullName>
    <label>Mat estrategias competencia</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>