force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Granel_precio_publico__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Granel_precio_publico__c</fullName>
    <label>Mat Granel precio publico</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>