force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Imagen__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Imagen__c</fullName>
    <label>Materialista - Imagen</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>