force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Marcas_volumen__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Marcas_volumen__c</fullName>
    <label>Materialista - Stock marcas y volumen</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>