force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Situacion_ventas__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Situacion_ventas__c</fullName>
    <label>Mat situacion ventas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>