force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Sucursales__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Sucursales__c</fullName>
    <label>Materialista - Sucursales</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>