force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Mat_Vol_Compra_CAZ__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Mat_Vol_Compra_CAZ__c</fullName>
    <label>Mat volumen compra CAZ</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>