force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/fields/CAZ_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>CAZ_Ubicacion__c</fullName>
    <label>Ubicación</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>