force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/recordTypes/Competidor.recordType-meta.xml
<RecordType>
    <fullName>Competidor</fullName>
    <active>false</active>
    <description>Record type legado. Ya no usar para nuevos checklists.</description>
    <label>Competidor</label>
</RecordType>