force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/recordTypes/Distribuidor.recordType-meta.xml
<RecordType>
    <fullName>Distribuidor</fullName>
    <active>true</active>
    <description>Checklist para visitas a distribuidores.</description>
    <label>Distribuidor</label>
</RecordType>