force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/recordTypes/Materialista.recordType-meta.xml
<RecordType>
    <fullName>Materialista</fullName>
    <active>true</active>
    <description>Checklist para visitas a materialistas.</description>
    <label>Materialista</label>
</RecordType>