force-app/main/default/objects/CAZ_Checklist_Monitoreo__c/recordTypes/Propia.recordType-meta.xml
<RecordType>
    <fullName>Propia</fullName>
    <active>false</active>
    <description>Record type legado. Ya no usar para nuevos checklists.</description>
    <label>Propia</label>
</RecordType>